Working on issue #3 (caching for distributed faceting). First take with DocValues only